--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     ]
   },
   "dependencies": {
+    "platform": "^1.3.5",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/polyfill": "7.4.3",
