--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postinstall": "npm run build:dll",
     "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
-    "build:clean": "rimraf ./build",
+    "build:clean": "rm -rf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
@@ -40,7 +40,7 @@
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prettify": "prettier --write"
   },
-  "browserslist": [
+  "overrideBrowserslist": [
     "last 2 versions",
     "> 1%"
   ],
@@ -89,11 +89,9 @@
     ]
   },
   "dependencies": {
-    "platform": "^1.3.5",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/polyfill": "7.4.3",
-    "@date-io/moment": "^1.0.1",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^1.1.0",
     "@material-ui/lab": "^3.0.0-alpha.28",
@@ -101,7 +99,7 @@
     "@types/markerclustererplus": "^2.1.33",
     "acorn": "^6.1.1",
     "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -113,6 +111,7 @@
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
+    "decode-google-map-polyline": "^1.0.1",
     "detect-browser": "^3.0.0",
     "dotenv": "^6.0.0",
     "downshift": "^1.31.12",
@@ -122,7 +121,12 @@
     "draftjs-to-html": "^0.8.3",
     "draftjs-to-markdown": "^0.5.1",
     "express": "4.16.4",
+    "firebase": "^6.2.4",
     "fontfaceobserver": "2.1.0",
+    "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
+    "highcharts": "^7.1.2",
+    "highcharts-react-official": "^2.2.2",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
@@ -132,12 +136,15 @@
     "ip": "1.1.5",
     "jss": "^9.8.7",
     "keycode": "^2.2.0",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "material-ui-pickers": "^2.1.1",
+    "material-ui-popup-state": "^1.4.0",
     "minimist": "1.2.0",
     "moment": "^2.24.0",
-    "mui-datatables": "^2.0.0-beta-1",
+    "mui-datatables": "^2.10.1",
+    "platform": "^1.3.5",
     "prop-types": "15.7.2",
+    "qrcode.react": "^0.9.3",
     "rcolor": "^1.0.1",
     "react": "16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.11",
@@ -149,13 +156,17 @@
     "react-charts": "^1.0.10",
     "react-clock": "^2.3.0",
     "react-countup": "^3.0.3",
+    "react-datepicker": "^2.8.0",
     "react-dom": "16.8.6",
     "react-draft-wysiwyg": "^1.12.13",
     "react-dropzone": "^4.3.0",
     "react-event-listener": "^0.6.1",
+    "react-geocode": "^0.1.2",
+    "react-google-autocomplete": "^1.1.0",
     "react-google-maps": "^9.4.5",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
+    "react-intl-tel-input": "^7.0.1",
     "react-ionicons": "^2.1.6",
     "react-loading-bar": "0.0.7",
     "react-markdown": "^3.1.5",
@@ -184,6 +195,7 @@
     "sanitize.css": "8.0.0",
     "serve-favicon": "^2.4.5",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^8.17.1",
     "tunnel-agent": "^0.6.0",
     "warning": "4.0.2"
   },
@@ -211,6 +223,7 @@
     "circular-dependency-plugin": "5.0.2",
     "compare-versions": "3.4.0",
     "compression-webpack-plugin": "2.0.0",
+    "copy-webpack-plugin": "^5.0.3",
     "coveralls": "3.0.3",
     "css-loader": "2.1.1",
     "enzyme": "3.7.0",
@@ -239,7 +252,7 @@
     "lint-staged": "8.1.5",
     "ngrok": "3.1.1",
     "node-plop": "0.18.0",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.12.0",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -253,7 +266,7 @@
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
     "react-to-print": "^2.0.0-alpha-4",
-    "rimraf": "2.6.3",
+    "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "sass-material-colors": "0.0.5",
     "shelljs": "^0.8.3",
