--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "react-geocode": "^0.1.2",
     "react-google-autocomplete": "^1.1.0",
     "react-google-maps": "^9.4.5",
+    "react-google-recaptcha": "^2.0.1",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
     "react-intl-tel-input": "^7.0.1",
