--- a/package.json
+++ b/package.json
@@ -147,6 +147,8 @@
     "qrcode.react": "^0.9.3",
     "rcolor": "^1.0.1",
     "react": "16.8.6",
+    "react-alert": "^6.0.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-animated-slider": "^1.1.2",
     "react-autosuggest": "^9.3.4",
